third_party/move/move-compiler-v2/tests/checking/typing/neq_invalid.exp

Diagnostics:
error: cannot use `u128` with an operator which expects a value of type `u8`
   ┌─ tests/checking/typing/neq_invalid.move:13:21
   │
13 │         (0: u8) != (1: u128);
   │                     ^

error: cannot use `bool` with an operator which expects a value of type `integer`
   ┌─ tests/checking/typing/neq_invalid.move:14:14
   │
14 │         0 != false;
   │              ^^^^^

error: cannot use `integer` with an operator which expects a value of type `&integer`
   ┌─ tests/checking/typing/neq_invalid.move:15:15
   │
15 │         &0 != 1;
   │               ^

error: cannot use `&integer` with an operator which expects a value of type `integer`
   ┌─ tests/checking/typing/neq_invalid.move:16:14
   │
16 │         1 != &0;
   │              ^^

error: cannot use `&S` with an operator which expects a value of type `S`
   ┌─ tests/checking/typing/neq_invalid.move:17:14
   │
17 │         s != s_ref;
   │              ^^^^^

error: cannot use `S` with an operator which expects a value of type `&mut S`
   ┌─ tests/checking/typing/neq_invalid.move:18:18
   │
18 │         s_mut != s;
   │                  ^

error: unable to infer instantiation of type `G0<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/checking/typing/neq_invalid.move:26:9
   │
26 │         G0{} != G0{};
   │         ^^^^

error: unable to infer instantiation of type `G1<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/checking/typing/neq_invalid.move:27:9
   │
27 │         G1{} != G1{};
   │         ^^^^

error: unable to infer instantiation of type `G2<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/checking/typing/neq_invalid.move:28:9
   │
28 │         G2{} != G2{};
   │         ^^^^

error: the operator takes 2 arguments but 3 were provided
   ┌─ tests/checking/typing/neq_invalid.move:34:22
   │
34 │         (1, 2, 3) != (0, 1);
   │                      ^^^^^^

error: the operator takes 3 arguments but 2 were provided
   ┌─ tests/checking/typing/neq_invalid.move:35:19
   │
35 │         (0, 1) != (1, 2, 3);
   │                   ^^^^^^^^^
